tests/ui/suggestions/option-content-move3.stderr
error[E0507]: cannot move out of `var`, a captured variable in an `FnMut` closure
  --> $DIR/option-content-move3.rs:11:21
   |
LL |     let mut var = NotCopyable;
   |         ------- captured outer variable
...
LL |         move || {
   |         ------- captured by this `FnMut` closure
LL |             let x = var;
   |                     ^^^ move occurs because `var` has type `NotCopyable`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |             let x = &var;
   |                     +

error[E0507]: cannot move out of `var`, a captured variable in an `FnMut` closure
  --> $DIR/option-content-move3.rs:10:9
   |
LL |     let mut var = NotCopyable;
   |         ------- captured outer variable
LL |     func(|| {
   |          -- captured by this `FnMut` closure
LL |         // Shouldn't suggest `move ||.as_ref()` here
LL |         move || {
   |         ^^^^^^^ `var` is moved here
LL |             let x = var;
   |                     ---
   |                     |
   |                     variable moved due to use in closure
   |                     move occurs because `var` has type `NotCopyable`, which does not implement the `Copy` trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
